--- a/DDAYGO/ViewController/My/Lottery/LotteryHomePage/ZP_LotteryCell/ZP_LotteryViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/LotteryHomePage/ZP_LotteryCell/ZP_LotteryViewCell.xib
@@ -11,40 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="95" id="KGk-i7-Jjw" customClass="ZP_LotteryViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="ZP_LotteryViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="94.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LEU-Vl-MnN">
-                        <rect key="frame" x="0.0" y="60" width="320" height="1"/>
-                        <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="1" id="Beh-rK-9VM"/>
-                        </constraints>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="订单号:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vGN-tx-lG8">
-                        <rect key="frame" x="9" y="6" width="34" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="ncK-HJ-K5b"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="65676523212666462662" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clh-7M-fH5">
-                        <rect key="frame" x="45" y="6" width="125.5" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="VZJ-Ib-Ejc"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xAU-vl-aqf">
-                        <rect key="frame" x="0.0" y="35" width="320" height="59"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="59" id="8on-S7-bkF"/>
@@ -58,24 +33,16 @@
                     </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="clh-7M-fH5" firstAttribute="leading" secondItem="vGN-tx-lG8" secondAttribute="trailing" constant="2" id="3Rm-tW-Bsl"/>
                     <constraint firstItem="xAU-vl-aqf" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="7kS-Yf-gy1"/>
-                    <constraint firstItem="LEU-Vl-MnN" firstAttribute="top" secondItem="xAU-vl-aqf" secondAttribute="bottom" constant="-34" id="DV1-sd-rMF"/>
-                    <constraint firstAttribute="trailing" secondItem="LEU-Vl-MnN" secondAttribute="trailing" id="Dk5-l0-BqU"/>
-                    <constraint firstItem="LEU-Vl-MnN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="HC6-u8-tyk"/>
-                    <constraint firstItem="xAU-vl-aqf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="35" id="HCY-0D-xn6"/>
-                    <constraint firstItem="vGN-tx-lG8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="R4T-Hc-Z7f"/>
-                    <constraint firstItem="vGN-tx-lG8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="Soh-gS-IaL"/>
+                    <constraint firstItem="xAU-vl-aqf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HCY-0D-xn6"/>
                     <constraint firstAttribute="trailing" secondItem="xAU-vl-aqf" secondAttribute="trailing" id="gtF-rR-4ds"/>
                     <constraint firstItem="xAU-vl-aqf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="pN3-f7-RXZ"/>
-                    <constraint firstItem="clh-7M-fH5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="tCC-3c-kVT"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="OrderNumberLabel" destination="clh-7M-fH5" id="SuB-SY-0iX"/>
                 <outlet property="collectionView" destination="xAU-vl-aqf" id="0mh-GU-nCb"/>
             </connections>
-            <point key="canvasLocation" x="34" y="79.5"/>
+            <point key="canvasLocation" x="34" y="71"/>
         </tableViewCell>
     </objects>
 </document>
