--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_DetailsSistoryAward/ZP_DetailsSistoryAwardCell/ZP_DetailsSistoryAwardcell/ZP_DetailsSistoryAwardTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_DetailsSistoryAward/ZP_DetailsSistoryAwardCell/ZP_DetailsSistoryAwardcell/ZP_DetailsSistoryAwardTableViewCell.xib
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_DetailsSistoryAwardTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_DetailsSistoryAwardTableViewCell" rowHeight="61" id="KGk-i7-Jjw" customClass="ZP_DetailsSistoryAwardTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_DetailsSistoryAwardTableViewCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_DetailsSistoryAwardTableViewCell" rowHeight="40" id="KGk-i7-Jjw" customClass="ZP_DetailsSistoryAwardTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="39.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ymi-aS-LBD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="afh-H3-jys"/>
+                            <constraint firstAttribute="height" constant="40" id="afh-H3-jys"/>
                             <constraint firstAttribute="width" constant="320" id="bRj-v2-fMe"/>
                         </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ANE-vB-iyO">
@@ -42,7 +42,7 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="ymi-aS-LBD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="5EI-B4-I6k"/>
-                    <constraint firstItem="GOB-pG-3cE" firstAttribute="top" secondItem="ymi-aS-LBD" secondAttribute="bottom" id="8a8-9U-1cn"/>
+                    <constraint firstItem="GOB-pG-3cE" firstAttribute="top" secondItem="ymi-aS-LBD" secondAttribute="bottom" constant="20" id="8a8-9U-1cn"/>
                     <constraint firstItem="GOB-pG-3cE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="AaH-1F-bzJ"/>
                     <constraint firstItem="ymi-aS-LBD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Azn-hB-axY"/>
                     <constraint firstAttribute="trailing" secondItem="GOB-pG-3cE" secondAttribute="trailing" id="BtT-Hm-K6g"/>
@@ -52,7 +52,7 @@
             <connections>
                 <outlet property="collectionView" destination="ymi-aS-LBD" id="nMZ-1W-g4r"/>
             </connections>
-            <point key="canvasLocation" x="34" y="64.5"/>
+            <point key="canvasLocation" x="34" y="54"/>
         </tableViewCell>
     </objects>
 </document>
