--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
@@ -12,22 +12,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_HistoryBetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_HistoryBetCell" rowHeight="81" id="KGk-i7-Jjw" customClass="ZP_HistoryBetCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_HistoryBetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_HistoryBetCell" rowHeight="41" id="KGk-i7-Jjw" customClass="ZP_HistoryBetCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="39.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dh0-9J-Idz">
-                        <rect key="frame" x="0.0" y="10" width="281" height="30"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_forward_right" translatesAutoresizingMaskIntoConstraints="NO" id="icH-5f-n2w">
+                        <rect key="frame" x="296" y="10" width="8" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="iKX-0w-qBN"/>
+                            <constraint firstAttribute="height" constant="15" id="HjJ-xN-uiE"/>
+                            <constraint firstAttribute="width" constant="8" id="nWf-kE-bxp"/>
                         </constraints>
-                    </view>
+                    </imageView>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="6eF-TL-gAf">
-                        <rect key="frame" x="0.0" y="40" width="281" height="40"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="40"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="RDI-Sl-PpZ"/>
@@ -39,30 +39,19 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_forward_right" translatesAutoresizingMaskIntoConstraints="NO" id="icH-5f-n2w">
-                        <rect key="frame" x="296" y="33" width="8" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="HjJ-xN-uiE"/>
-                            <constraint firstAttribute="width" constant="8" id="nWf-kE-bxp"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="icH-5f-n2w" secondAttribute="trailing" id="NFw-jT-5h2"/>
                     <constraint firstItem="6eF-TL-gAf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Pyh-D9-hep"/>
-                    <constraint firstItem="dh0-9J-Idz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="T2d-xn-6S8"/>
-                    <constraint firstItem="icH-5f-n2w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="W3i-M3-UEg"/>
-                    <constraint firstItem="icH-5f-n2w" firstAttribute="leading" secondItem="6eF-TL-gAf" secondAttribute="trailing" constant="15" id="dg8-Pl-W4x"/>
-                    <constraint firstItem="6eF-TL-gAf" firstAttribute="top" secondItem="dh0-9J-Idz" secondAttribute="bottom" id="fO6-re-MMY"/>
-                    <constraint firstItem="dh0-9J-Idz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hj6-VF-hb4"/>
-                    <constraint firstItem="icH-5f-n2w" firstAttribute="leading" secondItem="dh0-9J-Idz" secondAttribute="trailing" constant="15" id="pMQ-aY-VMR"/>
+                    <constraint firstItem="icH-5f-n2w" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-2.25" id="W3i-M3-UEg"/>
+                    <constraint firstItem="icH-5f-n2w" firstAttribute="leading" secondItem="6eF-TL-gAf" secondAttribute="trailing" constant="96" id="dg8-Pl-W4x"/>
+                    <constraint firstItem="6eF-TL-gAf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xzT-VJ-D2N"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="HistoryBetView" destination="dh0-9J-Idz" id="zCX-wf-SwJ"/>
                 <outlet property="collectionView" destination="6eF-TL-gAf" id="9YL-VJ-biq"/>
             </connections>
-            <point key="canvasLocation" x="34" y="72.5"/>
+            <point key="canvasLocation" x="34" y="52"/>
         </tableViewCell>
     </objects>
     <resources>
