--- a/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetViewcell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetViewcell.xib
@@ -1,47 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="437" id="KGk-i7-Jjw" customClass="BetViewcell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="437"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="429" id="KGk-i7-Jjw" customClass="BetViewcell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="436.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lzU-AI-Gmg">
-                        <rect key="frame" x="282" y="0.0" width="6.5" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="DOx-dV-vK0"/>
-                        </constraints>
+                        <rect key="frame" x="293" y="8" width="6.5" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="1" green="0.1956696383" blue="0.20120481270000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="张" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZP-rN-cKS">
-                        <rect key="frame" x="293.5" y="0.0" width="10.5" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="V61-p8-LMe"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您派彩金卷不足不能下注" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GhU-ZA-JbJ">
-                        <rect key="frame" x="191.5" y="15" width="112.5" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="GyS-CL-F7N"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您派彩金卷不足不能下注" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GhU-ZA-JbJ">
+                        <rect key="frame" x="199.5" y="20" width="112.5" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -73,9 +58,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="668-Pz-vQp">
-                        <rect key="frame" x="16" y="52" width="288" height="244"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="668-Pz-vQp">
+                        <rect key="frame" x="16" y="52" width="288" height="148"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TU0-eo-mgJ">
                                 <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
@@ -90,33 +74,40 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您当前可使用彩卷" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nD4-7c-Ysv">
-                        <rect key="frame" x="192" y="0.0" width="82" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="P05-7F-ZBB"/>
-                        </constraints>
+                        <rect key="frame" x="209" y="8" width="82" height="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="张" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZP-rN-cKS">
+                        <rect key="frame" x="301.5" y="8" width="10.5" height="12"/>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="2ZP-rN-cKS" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="4ea-aW-X3Y"/>
-                    <constraint firstItem="GhU-ZA-JbJ" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="J09-Ft-cdf"/>
+                    <constraint firstItem="lzU-AI-Gmg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="2Ww-gb-oDP"/>
+                    <constraint firstItem="2ZP-rN-cKS" firstAttribute="leading" secondItem="lzU-AI-Gmg" secondAttribute="trailing" constant="2" id="Cux-77-Hm9"/>
+                    <constraint firstAttribute="trailing" secondItem="668-Pz-vQp" secondAttribute="trailing" constant="16" id="JSb-vd-SYo"/>
                     <constraint firstItem="3Qu-pV-lTq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="24" id="KhP-dx-v9x"/>
-                    <constraint firstItem="nD4-7c-Ysv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="MK9-IN-oh1"/>
-                    <constraint firstItem="lzU-AI-Gmg" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="Oue-1e-Xrg"/>
+                    <constraint firstItem="GhU-ZA-JbJ" firstAttribute="top" secondItem="lzU-AI-Gmg" secondAttribute="bottom" id="Lh8-rN-sw6"/>
                     <constraint firstItem="S8z-0C-L91" firstAttribute="leading" secondItem="3Qu-pV-lTq" secondAttribute="trailing" constant="5" id="VKN-do-hII"/>
+                    <constraint firstItem="lzU-AI-Gmg" firstAttribute="leading" secondItem="nD4-7c-Ysv" secondAttribute="trailing" constant="2" id="Z3F-c1-s8X"/>
                     <constraint firstItem="S8z-0C-L91" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="24" id="cUI-Je-87l"/>
+                    <constraint firstAttribute="trailing" secondItem="2ZP-rN-cKS" secondAttribute="trailing" constant="8" id="eUs-1G-5hy"/>
                     <constraint firstItem="onP-sN-j1J" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="24" id="eVn-FT-rPZ"/>
                     <constraint firstItem="onP-sN-j1J" firstAttribute="leading" secondItem="S8z-0C-L91" secondAttribute="trailing" constant="3" id="edy-Fd-HJ9"/>
-                    <constraint firstItem="2ZP-rN-cKS" firstAttribute="leading" secondItem="lzU-AI-Gmg" secondAttribute="trailing" constant="5" id="mnx-KZ-4ki"/>
-                    <constraint firstItem="lzU-AI-Gmg" firstAttribute="leading" secondItem="nD4-7c-Ysv" secondAttribute="trailing" constant="8" id="mq2-cF-Lg1"/>
-                    <constraint firstItem="2ZP-rN-cKS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-11" id="sZq-WH-hKp"/>
-                    <constraint firstItem="GhU-ZA-JbJ" firstAttribute="top" secondItem="lzU-AI-Gmg" secondAttribute="bottom" id="uPC-uG-cgq"/>
+                    <constraint firstItem="2ZP-rN-cKS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="iuX-qL-T71"/>
+                    <constraint firstItem="nD4-7c-Ysv" firstAttribute="centerY" secondItem="2ZP-rN-cKS" secondAttribute="centerY" id="l5A-Y4-1RY"/>
+                    <constraint firstItem="668-Pz-vQp" firstAttribute="top" secondItem="3Qu-pV-lTq" secondAttribute="bottom" constant="2" id="lcf-aE-wtg"/>
+                    <constraint firstItem="668-Pz-vQp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="qAS-yl-lpX"/>
+                    <constraint firstAttribute="bottom" secondItem="668-Pz-vQp" secondAttribute="bottom" id="vkJ-mC-CU7"/>
+                    <constraint firstItem="GhU-ZA-JbJ" firstAttribute="trailing" secondItem="2ZP-rN-cKS" secondAttribute="trailing" id="voh-UZ-j2e"/>
                     <constraint firstItem="3Qu-pV-lTq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="vuC-v6-Ehd"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="35" y="285.5"/>
+            <point key="canvasLocation" x="35" y="285"/>
         </tableViewCell>
     </objects>
     <resources>
