--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_HistoryHomePage/ZP_HistoryBetCell/ZP_HistoryBetCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,10 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" restorationIdentifier="ZP_HistoryBetCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZP_HistoryBetCell" rowHeight="31" id="KGk-i7-Jjw" customClass="ZP_HistoryBetCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="31"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="30.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="29.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_forward_right" translatesAutoresizingMaskIntoConstraints="NO" id="icH-5f-n2w">
@@ -105,6 +105,14 @@
                     <constraint firstItem="T8v-6d-6er" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xsS-yb-DPb"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="button1" destination="zYE-9j-mvV" id="k9P-VP-u5H"/>
+                <outlet property="button2" destination="HDX-5u-q6z" id="D1e-aD-W6G"/>
+                <outlet property="button3" destination="yKh-Da-rsf" id="Kyv-f2-3B8"/>
+                <outlet property="button4" destination="JO5-Hf-oYV" id="IdH-wm-D3j"/>
+                <outlet property="button5" destination="Qid-dU-l6H" id="Id0-6p-8yv"/>
+                <outlet property="button6" destination="T8v-6d-6er" id="0X7-fz-HBH"/>
+            </connections>
             <point key="canvasLocation" x="34" y="47"/>
         </tableViewCell>
     </objects>
