修改地址接口
修改地址接口

--- a/DDAYGO/ViewController/My/Setting/ReceivingAddress/FrontPageReceivingAddress/Cell/AddressTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Setting/ReceivingAddress/FrontPageReceivingAddress/Cell/AddressTableViewCell.xib
@@ -60,17 +60,6 @@
                         </state>
                         <state key="selected" image="ic_Shopping_Choice_pressed"/>
                     </button>
-                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xUE-ly-bQU">
-                        <rect key="frame" x="297" y="94" width="62" height="43.5"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="62" id="f2e-n5-LlD"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
-                        <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <state key="normal" title="删除" image="icon_address_delete_normal@2x">
-                            <color key="titleColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                        </state>
-                    </button>
                     <button opaque="NO" contentMode="center" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjZ-AU-Ls3">
                         <rect key="frame" x="205" y="94" width="62" height="43"/>
                         <constraints>
@@ -83,6 +72,20 @@
                         </state>
                         <connections>
                             <action selector="editAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="YbQ-Qw-wJy"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xUE-ly-bQU">
+                        <rect key="frame" x="297" y="94" width="62" height="43.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="62" id="f2e-n5-LlD"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                        <inset key="titleEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <state key="normal" title="删除" image="icon_address_delete_normal@2x">
+                            <color key="titleColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <connections>
+                            <action selector="DeletingBut:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="hcW-Cu-oHA"/>
                         </connections>
                     </button>
                 </subviews>
