--- a/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_DetailsSistoryAward/ZP_DetailsSistoryAwardcell/ZP_DetailsSistoryAwardTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_HistoryBet/ZP_DetailsSistoryAward/ZP_DetailsSistoryAwardcell/ZP_DetailsSistoryAwardTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,22 +18,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="34.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zGD-gB-Yy2">
-                        <rect key="frame" x="8" y="2" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="1en-nO-J6H"/>
-                            <constraint firstAttribute="width" constant="30" id="Hme-Jv-5mh"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
-                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
-                    </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihP-Et-YDV">
-                        <rect key="frame" x="46" y="2" width="30" height="30"/>
+                        <rect key="frame" x="46" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="1w2-DP-ulq"/>
-                            <constraint firstAttribute="width" constant="30" id="Qab-1J-Y90"/>
+                            <constraint firstAttribute="width" constant="25" id="DxJ-Ts-WEO"/>
+                            <constraint firstAttribute="height" constant="25" id="N81-8X-b02"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
@@ -41,10 +30,10 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DcJ-Qs-EIN">
-                        <rect key="frame" x="84" y="2" width="30" height="30"/>
+                        <rect key="frame" x="84" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="08D-DP-Ycc"/>
-                            <constraint firstAttribute="height" constant="30" id="HcM-0Y-UvH"/>
+                            <constraint firstAttribute="width" constant="25" id="YkM-ej-E6s"/>
+                            <constraint firstAttribute="height" constant="25" id="lCR-vY-aIe"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
@@ -52,10 +41,10 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6IN-Ia-Etc">
-                        <rect key="frame" x="122" y="2" width="30" height="30"/>
+                        <rect key="frame" x="122" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Xny-9w-Cmp"/>
-                            <constraint firstAttribute="width" constant="30" id="bZT-Yf-UtE"/>
+                            <constraint firstAttribute="height" constant="25" id="B0P-K5-xB6"/>
+                            <constraint firstAttribute="width" constant="25" id="hn2-lc-kul"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
@@ -63,10 +52,10 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T3y-l4-P1d">
-                        <rect key="frame" x="160" y="2" width="30" height="30"/>
+                        <rect key="frame" x="160" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="26x-PB-7ex"/>
-                            <constraint firstAttribute="height" constant="30" id="ABi-PF-Tu8"/>
+                            <constraint firstAttribute="height" constant="25" id="47F-19-L5o"/>
+                            <constraint firstAttribute="width" constant="25" id="fEe-0f-qv4"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
@@ -74,31 +63,41 @@
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69a-g3-rY8">
-                        <rect key="frame" x="198" y="2" width="30" height="30"/>
+                        <rect key="frame" x="198" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Sbn-p4-91o"/>
-                            <constraint firstAttribute="width" constant="30" id="nWn-Ek-Ty2"/>
+                            <constraint firstAttribute="height" constant="25" id="FI9-cL-cDn"/>
+                            <constraint firstAttribute="width" constant="25" id="Vh7-SW-lsx"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="5" backgroundImage="bg_choose_redball">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zGD-gB-Yy2">
+                        <rect key="frame" x="13" y="5" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="JHN-tK-vXR"/>
+                            <constraint firstAttribute="height" constant="25" id="vzY-oJ-3bE"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <state key="normal" title="5" backgroundImage="bg_choose_whiteball_pressed">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="69a-g3-rY8" secondAttribute="trailing" constant="92" id="0gX-7a-tii"/>
-                    <constraint firstItem="69a-g3-rY8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="8EP-zz-63j"/>
-                    <constraint firstItem="69a-g3-rY8" firstAttribute="leading" secondItem="T3y-l4-P1d" secondAttribute="trailing" constant="8" id="A0E-zk-pry"/>
-                    <constraint firstItem="6IN-Ia-Etc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="BqT-W8-qnQ"/>
-                    <constraint firstItem="DcJ-Qs-EIN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="FiF-gk-nKl"/>
-                    <constraint firstItem="ihP-Et-YDV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="JyO-q5-fGU"/>
-                    <constraint firstItem="T3y-l4-P1d" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="LkP-IW-W7S"/>
-                    <constraint firstItem="zGD-gB-Yy2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="TUO-Ow-3ys"/>
-                    <constraint firstItem="DcJ-Qs-EIN" firstAttribute="leading" secondItem="ihP-Et-YDV" secondAttribute="trailing" constant="8" id="ZPq-yI-cVt"/>
-                    <constraint firstItem="ihP-Et-YDV" firstAttribute="leading" secondItem="zGD-gB-Yy2" secondAttribute="trailing" constant="8" id="dPU-bV-6eG"/>
-                    <constraint firstItem="zGD-gB-Yy2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="eCm-a0-JLC"/>
-                    <constraint firstItem="6IN-Ia-Etc" firstAttribute="leading" secondItem="DcJ-Qs-EIN" secondAttribute="trailing" constant="8" id="jjS-QU-v7O"/>
-                    <constraint firstItem="T3y-l4-P1d" firstAttribute="leading" secondItem="6IN-Ia-Etc" secondAttribute="trailing" constant="8" id="tdq-t7-H9x"/>
+                    <constraint firstItem="6IN-Ia-Etc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="128-nV-SgU"/>
+                    <constraint firstItem="zGD-gB-Yy2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="2cy-SZ-cUO"/>
+                    <constraint firstItem="DcJ-Qs-EIN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Iie-60-7QJ"/>
+                    <constraint firstItem="69a-g3-rY8" firstAttribute="leading" secondItem="T3y-l4-P1d" secondAttribute="trailing" constant="13" id="JT4-cM-ce8"/>
+                    <constraint firstItem="ihP-Et-YDV" firstAttribute="leading" secondItem="zGD-gB-Yy2" secondAttribute="trailing" constant="8" id="JlQ-ej-WUG"/>
+                    <constraint firstItem="ihP-Et-YDV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Qn8-pZ-cQy"/>
+                    <constraint firstItem="69a-g3-rY8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="UyK-gP-Tjh"/>
+                    <constraint firstItem="T3y-l4-P1d" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="WEe-s9-vxT"/>
+                    <constraint firstItem="6IN-Ia-Etc" firstAttribute="leading" secondItem="DcJ-Qs-EIN" secondAttribute="trailing" constant="13" id="Xf8-AU-FPU"/>
+                    <constraint firstItem="zGD-gB-Yy2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="gqa-I0-Jee"/>
+                    <constraint firstItem="DcJ-Qs-EIN" firstAttribute="leading" secondItem="ihP-Et-YDV" secondAttribute="trailing" constant="13" id="pAG-ip-2MW"/>
+                    <constraint firstItem="T3y-l4-P1d" firstAttribute="leading" secondItem="6IN-Ia-Etc" secondAttribute="trailing" constant="13" id="qgY-W3-5hm"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
